--- a/src/Mail/Mail.css
+++ b/src/Mail/Mail.css
@@ -1,12 +1,47 @@
 .language {
   border-radius: 50px;
-  background: #e0e0e0;
+  background: #24282a;
   box-shadow: 5px 5px 10px #25282b, -5px -5px 10px #33363a;
   position: fixed;
   display: inline-block;
   width: 50px;
   height: 50px;
-  left: 20px;
+  left: 300px;
   bottom: 20px;
   z-index: 99999;
+}
+
+.language:active {
+  transform: rotate(-45deg);
+  transition: tansform 0.15s;
+}
+
+.buttonMenu1 {
+  display: inline-block;
+  text-decoration: none;
+  text-decoration-skip-ink: auto;
+  color: inherit;
+  position: relative;
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+.buttonMenu2 {
+  display: inline-block;
+  text-decoration: none;
+  text-decoration-skip-ink: auto;
+  color: inherit;
+  position: relative;
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+.buttonMenu3 {
+  display: inline-block;
+  text-decoration: none;
+  text-decoration-skip-ink: auto;
+  color: inherit;
+  position: relative;
+  transition: var(--transition);
+  cursor: pointer;
 }
