--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto Mono", monospace;
 }
-
+html {
+  font-family: "Roboto Mono", monospace;
+}
 .Main {
-  background-color: #2c2f32;
+  background-color: #2c3032;
   background-size: cover;
-  height: 115vh;
+  height: 120vh;
   padding-top: 50px;
 }
 .App-logo {
@@ -25,6 +28,8 @@
   border: none;
   outline: none;
   border-radius: 3px 3px 3px 3px;
+  font-weight: 700;
+  font-size: 14px;
 }
 
 p.header-title {
@@ -37,6 +42,8 @@ h2 {
 
 p {
   color: gray;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 button {
@@ -45,6 +52,11 @@ button {
   border: none;
   text-decoration: underline;
   color: #6c6ed3;
+}
+
+#Chat {
+  font-size: 30px;
+  font-weight: 800;
 }
 
 .circle-sm {
@@ -146,4 +158,15 @@ nav.navbar {
 
 button.navbar-toggler {
   color: #6c6ed3;
+}
+
+#mainRow {
+  display: flex;
+}
+
+@media (max-width: 767px) {
+  /* <== You can change this break point as per your  needs */
+  #mainRow {
+    display: flex;
+  }
 }
