--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -5,9 +5,9 @@
 }
 
 .contactMain {
-  background-color: #2c2f32;
+  background-color: #24282a;
   background-size: cover;
-  height: 100vh;
+  height: 135vh;
   padding-top: 50px;
 }
 
@@ -67,4 +67,21 @@ a {
 
 #button {
   color: #6c6ed3;
+}
+
+#credits {
+  text-align: center;
+  align-items: center;
+}
+
+#social {
+  margin: 20px;
+  align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+  #credits {
+    display: flex;
+    flex-direction: row;
+  }
 }
