--- a/src/Mail/Mail.css
+++ b/src/Mail/Mail.css
@@ -1,14 +1,18 @@
 .language {
   border-radius: 50px;
-  background: #24282a;
+  background: #6c6ed3;
   box-shadow: 5px 5px 10px #25282b, -5px -5px 10px #33363a;
   position: fixed;
   display: inline-block;
   width: 50px;
   height: 50px;
-  left: 300px;
   bottom: 20px;
   z-index: 99999;
+  margin-left: 310px;
+}
+
+#icon {
+  margin-top: 20px;
 }
 
 .language:active {
