--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -7,7 +7,14 @@
 .projectsMain {
   background-color: #2c2f32;
   background-size: cover;
-  height: 115vh;
+  height: 310vh;
+  width: fit-content;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  align-items: center;
+  padding-top: 35px;
 }
 
 .projectOverline {
@@ -66,13 +73,13 @@
 }
 .featherGithub {
   color: #6c6ed3;
-  margin: 10px;
+  margin: 5px;
   padding: 10px;
 }
 
 .featherExternalLink {
   color: #6c6ed3;
-  margin: 10px;
+  margin: 5px;
   padding: 10px;
 }
 
@@ -80,14 +87,13 @@ img.weatherImg {
   height: 200px;
   width: 100%;
   position: absolute;
+  border-radius: 50px;
 }
 
 .productImage {
   height: 200px;
-  width: 87%;
+  width: 100%;
   position: relative;
-  box-shadow: inset 0 0 0 1000px #5238e686;
-  opacity: 0.3;
 }
 
 .circle-sm-links {
@@ -106,18 +112,20 @@ img.weatherImg {
   box-shadow: 5px 5px 10px #25272a, -5px -5px 10px #33373a;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: relative;
   margin: 20px 20px 20px 20px;
+  width: 300px;
 }
 
-.projectCard {
+.projectCard1 {
   border-radius: 15px;
   background: #2c2f32;
   box-shadow: 5px 5px 10px #25272a, -5px -5px 10px #33373a;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: relative;
   margin: 20px 20px 20px 20px;
+  width: 300px;
 }
 .circle-sm-links:active {
   box-shadow: inset 5px 5px 10px #25272a, inset -5px -5px 10px #33373a;
