--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -59,7 +59,7 @@ a {
 .circle-xl-contact {
   border-radius: 50%;
   background: #24282a;
-  box-shadow: 5px 5px 10px #25282b, -5px -5px 10px #33363a;
+  box-shadow: 5px 5px 10px #1f2224, -5px -5px 10px #292e30;
   width: 300px;
   height: 300px;
   margin: 30px;
@@ -77,6 +77,7 @@ a {
 #social {
   margin: 20px;
   align-items: center;
+  padding-left: 70px;
 }
 
 @media only screen and (min-width: 768px) {
