--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto Mono", monospace;
+  font-family: "Montserrat", sans-serif;
 }
 html {
   font-family: "Roboto Mono", monospace;
@@ -10,7 +10,7 @@ html {
 .Main {
   background-color: #2c3032;
   background-size: cover;
-  height: 120vh;
+  height: 115vh;
   padding-top: 50px;
 }
 .App-logo {
@@ -42,8 +42,6 @@ h2 {
 
 p {
   color: gray;
-  font-size: 20px;
-  font-weight: 500;
 }
 
 button {
