--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -7,14 +7,12 @@
 .projectsMain {
   background-color: #2c2f32;
   background-size: cover;
-  height: 310vh;
+  height: 205vh;
   width: fit-content;
   position: relative;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   width: 100vw;
   align-items: center;
-  padding-top: 35px;
 }
 
 .projectOverline {
@@ -90,12 +88,6 @@ img.weatherImg {
   border-radius: 50px;
 }
 
-.productImage {
-  height: 200px;
-  width: 100%;
-  position: relative;
-}
-
 .circle-sm-links {
   border-radius: 50%;
   background: #2c2f32;
@@ -106,17 +98,6 @@ img.weatherImg {
   margin-left: 15px;
 }
 
-.projectCard {
-  border-radius: 15px;
-  background: #2c2f32;
-  box-shadow: 5px 5px 10px #25272a, -5px -5px 10px #33373a;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  margin: 20px 20px 20px 20px;
-  width: 300px;
-}
-
 .projectCard1 {
   border-radius: 15px;
   background: #2c2f32;
@@ -125,8 +106,12 @@ img.weatherImg {
   flex-direction: column;
   position: relative;
   margin: 20px 20px 20px 20px;
-  width: 300px;
 }
 .circle-sm-links:active {
   box-shadow: inset 5px 5px 10px #25272a, inset -5px -5px 10px #33373a;
+}
+
+svg {
+  height: 50px;
+  width: 50px;
 }
