--- a/src/About/About.css
+++ b/src/About/About.css
@@ -105,3 +105,14 @@ p#aboutHeader {
   text-decoration: none;
   background-color: transparent;
 }
+
+@media only screen and (min-width: 990px) {
+  /* For tablets: */
+  .aboutMain {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  #hero {
+    padding-left: 150px;
+  }
+}
