--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -7,7 +7,7 @@
 .projectsMain {
   background-color: #2c2f32;
   background-size: cover;
-  height: 205vh;
+  height: 200vh;
   width: fit-content;
   position: relative;
   display: grid;
@@ -68,16 +68,17 @@
   padding-top: 10px;
   list-style: none;
   color: #fff;
+  padding: 20px 20px 20px 20px;
 }
 .featherGithub {
   color: #6c6ed3;
-  margin: 5px;
+  margin: 0px;
   padding: 10px;
 }
 
 .featherExternalLink {
   color: #6c6ed3;
-  margin: 5px;
+  margin: 0px;
   padding: 10px;
 }
 
@@ -98,7 +99,7 @@ img.weatherImg {
   margin-left: 15px;
 }
 
-.projectCard1 {
+.projectCard {
   border-radius: 15px;
   background: #2c2f32;
   box-shadow: 5px 5px 10px #25272a, -5px -5px 10px #33373a;
@@ -114,4 +115,101 @@ img.weatherImg {
 svg {
   height: 50px;
   width: 50px;
+}
+
+#projectsHeader {
+  color: #6c6ed3;
+  padding-left: 40px;
+}
+
+@media only screen and (min-width: 575px) {
+  .projectsMain {
+    height: 100vh;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .projectsMain {
+    height: 125vh;
+  }
+}
+/* This is a single-line comment 
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.projectCard:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.projectCard:hover .flip-card-back {
+  display: block;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+*/
+
+.flip-card {
+  background-color: transparent;
+  border-radius: 15px;
+  background: #2c2f32;
+  display: flex;
+  /* flex-direction: column; */
+  position: relative;
+  margin: 20px 20px 20px 20px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  border-radius: 15px;
+  background: #2c2f32;
+  box-shadow: 5px 5px 10px #25272a, -5px -5px 10px #33373a;
+  width: 100%;
+  height: 100%;
+}
+
+/* Style the back side */
+.flip-card-back {
+  border-radius: 15px;
+  background: #2c2f32;
+  box-shadow: 5px 5px 10px #25272a, -5px -5px 10px #33373a;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  height: fit-content;
+  transform: rotateY(180deg);
 }
