--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,10 @@ html {
 .Main {
   background-color: #2c3032;
   background-size: cover;
-  height: 120vh;
+  height: 100%;
   padding-top: 50px;
+  overflow: hidden;
+  position: relative;
 }
 .App-logo {
   height: 40vmin;
@@ -55,6 +57,7 @@ button {
 #Chat {
   font-size: 30px;
   font-weight: 800;
+  padding-bottom: 40px;
 }
 
 .circle-sm {
