--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -10,6 +10,8 @@
   height: 100%;
   padding-top: 50px;
   position: relative;
+  text-align: center;
+  align-items: center;
 }
 
 #Contact.container {
@@ -37,10 +39,6 @@ li {
   display: list-item;
   text-align: -webkit-match-parent;
   color: #fff;
-}
-
-ul a {
-  padding: 10px;
 }
 
 a {
@@ -77,8 +75,7 @@ a {
 
 #social {
   margin: 20px;
-  align-items: center;
-  padding-left: 45px;
+  align-content: center;
 }
 
 @media only screen and (min-width: 768px) {
@@ -94,8 +91,7 @@ a {
   }
   #social {
     margin: 20px;
-    align-items: center;
-    padding-left: 250px;
+    align-content: center;
   }
   #credits {
     padding-left: 400px;
